Fix Bug 1349339 - Mobile menu on /nightly/all is unreadable

--- a/media/css/firefox/all.less
+++ b/media/css/firefox/all.less
@@ -24,22 +24,11 @@ body.nightly {
         color: #61CCFF;
         text-shadow: none;
     }
+    #masthead h2 img {
+        height: auto;
+    }
     #main-feature h2 {
         color: #FFF;
-    }
-    #masthead nav li {
-        a,
-        a:link,
-        a:visited {
-            color: #FFF;
-        }
-        li {
-            a,
-            a:link,
-            a:visited {
-                color: @textColorSecondary;
-            }
-        }
     }
 }
 
